# modern-cpp-howto

./: .gitignore  README.md  SUMMARY.md  book.json  chapter1.md
_vendor/: .gitignore
_vendor/catch/: update.py
_vendor/catch-ext/: update.py
_vendor/catch-ext/include/: catch_ext.hpp  module.modulemap
_vendor/catch/include/: module.modulemap
_vendor/fmt/: update.py
_vendor/fmt/include/fmt/: all.hpp  module.modulemap
_vendor/include/: catch.hpp  catch_with_main.hpp  meta  range
_vendor/json/: update.py
_vendor/range/: update.py
_vendor/range-v3/include/: module.modulemap
list-and-map/: CMakeLists.txt  _vendor  build.sh  catch.hpp  chapter.md  main.cpp  main.py
project-setup/: CMakeLists.txt  build.sh  chapter.md  main.cpp  main.py
text-manipulation/: CMakeLists.txt  chapter.md  main.cpp  main.py
unit-testing/: CMakeLists.txt  catch.hpp  chapter.md  main.cpp  main.py
value-or-reference/: chapter.md
value-or-reference/cpp/: CMakeLists.txt  _vendor  main.cpp
value-or-reference/golang/src/: test.go
value-or-reference/php/: main.php
value-or-reference/python/: ddd.py  main.py
